This file includes only a short list of the changes between MPC-HC's versions.
For the older changes see:
https://github.com/mpc-hc/mpc-hc/blob/master/docs/Changelog_old.txt

Legend:
+ New
* Changed
! Fixed


next version - not released yet
===============================
+ DVB: Show current event time in the status bar
+ DVB: Add context menu to the navigation dialog
! Ticket #3666, DVB: Don't clear the channel list on saving new scan result
! Ticket #4436, DVB: Improve compatibility with certain tuners


1.7.7 - 05 October 2014
=======================
+ Accept loading more than one subtitle file at a time using the "Load subtitle" dialog or drag-and-drop
+ Add advanced settings page
+ Add Arabic and Thai translations
+ Completely reworked subtitle queue:
    - The queue should be quite faster than the older one for a similar number of buffered subpictures.
      It should also work much better when the number of subpictures becomes important
    - Subtitle animation can now be disabled even when using no buffering
    - Add the ability to choose at which state (in percentage of the full animation) an animated subtitle
      will be rendered when the animation is turned off
    - Add the ability to control the rate of the animation (in percentage of the movie frame rate)
    - Add the ability to control whether the subtitle queue is allowed to drop some subpictures in case
      subtitle rendering is too slow
+ Add option to set jpg quality when saving images (default quality is increased from 75% to 90%)
+ Ticket #353, Allow to control minimum file duration for remember position feature
+ Ticket #1287, Add after playback command to turn off the monitor.
+ Ticket #1407/#2425, Add an advanced option to control the number of recent files. Those files are shown
  in the "Recent Files" menu. It is also the files for which a position is potentially saved
+ Ticket #1531, Show cover-art while playing audio files
+ Ticket #2194, Show drive label when playing DVD